--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<h1>Hello!</h1>
+<html>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<style> path {stroke: black;}</style>
+<body>
+<svg width=300 height=300>
+</svg>
+<script>
+		var data = [4,8,15,16,23,42];
+
+		var svg = d3.select("svg"),
+			width = svg.attr("width"),
+			height = svg.attr("height"),
+			radius = Math.min(width, height) / 2,
+			g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+		var color = d3.scaleOrdinal(['pink','lightyellow','lightgreen','lightcyan','lightblue','violet']);
+
+		// Generate the pie
+		var pie = d3.pie();
+
+		// Generate the arcs
+		var arc = d3.arc()
+					.innerRadius(0)
+					.outerRadius(radius/3*2);
+
+		//Generate groups
+		var arcs = g.selectAll("g")
+					.data(pie(data))
+					.enter()
+
+		//Draw arc paths
+		arcs.append("path")
+			.attr("d", arc)
+                        .attr("fill", function(d, i) {
+				return color(i);
+			});
+	</script>
+</body>
+</html>
