--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <svg width=300 height=300>
 </svg>
 <script>
+async function init() {
 const data = await d3.csv('https://flunky.github.io/cars2017.csv');
  d3.select('body')
   .selectAll('p')
