--- a/index.html
+++ b/index.html
@@ -2,26 +2,24 @@
 <meta charset="utf-8">
 <style> /* set the CSS */
 
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
-}
 
 div.tooltip {
   position: absolute;
   text-align: center;
-  width: 60px;
-  height: 28px;
+  width: 270px;
+  height: 56px;
   padding: 2px;
   font: 12px sans-serif;
-  background: lightsteelblue;
+  background: lightblue;
   border: 0px;
   border-radius: 8px;
   pointer-events: none;
 }
 
 </style>
+<h1> What's the relationship between a movie's "Budget" and it's "Revenue"? </h1>
+<b1> Shown below is a scatterplot of all movies with a budget above $100M, plotted by their budgets in the millions on the x-axis, and their revenue in the millions on their y-axis. </b1>
+<b2> You can see a general trend of higher budgetted movies having higher revenues, but there are still datapoints showing high budgets with low revenue and vice versa. Why do the 2 highlighted points exist?</b2>
 <body>
 
 <!-- load the d3.js library -->    	
@@ -29,21 +27,23 @@ div.tooltip {
 <script>
 
 // set the dimensions and margins of the graph
-var margin = {top: 20, right: 20, bottom: 30, left: 50},
+var margin = {top: 50, right: 100, bottom: 100, left: 100},
     width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    height = 700 - margin.top - margin.bottom;
 
 // parse the date / time
 var parseTime = d3.timeParse("%d-%b-%y");
 var formatTime = d3.timeFormat("%e %B");
 
 // set the ranges
-var x = d3.scaleTime().range([0, width]);
+var x = d3.scaleLinear().range([0, width]);
 var y = d3.scaleLinear().range([height, 0]);
+  let logScale = d3.scaleLog()
+logScale(10);
 
 // define the line
 var valueline = d3.line()
-    .x(function(d) { return x(d.date); })
+    .x(function(d) { return x(d.open); })
     .y(function(d) { return y(d.close); });
 
 var div = d3.select("body").append("div")
@@ -61,45 +61,64 @@ var svg = d3.select("body").append("svg")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // Get the data
-d3.csv("https://miketeufel1.github.io/project/data.csv", function(error, data) {
+d3.csv("https://miketeufel1.github.io/project/movies3.csv", function(error, data) {
   if (error) throw error;
 
   // format the data
   data.forEach(function(d) {
-      d.date = parseTime(d.date);
-      d.close = +d.close;
+      d.budget = +d.budget/1000000;
+      d.revenue = +d.revenue/1000000;
+      d.original_title = d.original_title;
+      d.vote_average = +d.vote_average;
+      d.release_year = d.release_year;
   });
 
   // scale the range of the data
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain([0, d3.max(data, function(d) { return d.close; })]);
+  x.domain([100, d3.max(data, function(d) { return d.budget; })]);
+  y.domain([0, d3.max(data, function(d) { return d.revenue; })]);
 
-  // add the valueline path.
-  svg.append("path")
-     .data([data])
-     .attr("class", "line")
-     .attr("d", valueline);
 
   // add the dots with tooltips
   svg.selectAll("dot")
      .data(data)
    .enter().append("circle")
+  	  .filter(function(d) { if (d.budget < 100) {return false}
+            else if (d.vote_average <= 4) {return true}
+            else { return true } })
      .attr("r", 5)
-     .attr("cx", function(d) { return x(d.date); })
-     .attr("cy", function(d) { return y(d.close); })
+     .attr("cx", function(d) { return x(d.budget); })
+     .attr("cy", function(d) { return y(d.revenue); })
+  
+     .attr("fill", function(d) {
+            if (d.vote_average >= 7.5) {return "green"}
+            else 	if (d.vote_average < 5.5) { return "red" }
+              else { return "lightgray" }
+        ;})
+  
+     .attr('fill-opacity', function(d) {
+            if (d.vote_average >= 7.5) {return .8}
+            else 	if (d.vote_average <= 5) { return .8 }
+              else { return .8 }
+        ;})
+  
+  
      .on("mouseover", function(d) {
        div.transition()
          .duration(200)
          .style("opacity", .9);
-       div.html(formatTime(d.date) + "<br/>" + d.close)
+       div.html(d.original_title +"("+d.release_year+")"+ 
+                "<br/>" + "Budget: $" + d.budget+"M"+ 
+                "<br/>" + "Revenue: $" + Math.round(d.revenue*100)/100+"M"+
+                "<br/>" + "IMDB rating: " + d.vote_average)
          .style("left", (d3.event.pageX) + "px")
          .style("top", (d3.event.pageY - 28) + "px");
        })
      .on("mouseout", function(d) {
        div.transition()
-         .duration(500)
+         .duration(5000)
          .style("opacity", 0);
        });
+
 
   // add the X Axis
   svg.append("g")
@@ -113,4 +132,7 @@ d3.csv("https://miketeufel1.github.io/project/data.csv", function(error, data) {
 });
 
 </script>
+  <b3> The movie highlighted in blue has a Budget of $125M and a revenue of $1.3B</b3>
+  <b4> <br/>The movie highlighted in orange has a Budget of $255M and a revenue of $89.3M</b4>
+  <b4> <br/> <br/>What other factors might be at play here?</b4>
 </body>
