--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ d3.csv("https://miketeufel1.github.io/project/movies3.csv", function(error, data
 });
 
 </script>
-  <b3> The movie highlighted in blue has a Budget of $125M and a revenue of $1.3B</b3>
+  <b3> <br/>The movie highlighted in blue has a Budget of $125M and a revenue of $1.3B</b3>
   <b4> <br/>The movie highlighted in orange has a Budget of $255M and a revenue of $89.3M</b4>
   <b4> <br/> <br/>What other factors might be at play here?</b4>
 </body>
