--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ d3.csv("https://miketeufel1.github.io/project/movies3.csv", function(error, data
      .attr("cy", function(d) { return y(d.revenue); })
   
      .attr("fill", function(d) {
-            if (d.vote_average >= 7.5) {return "green"}
-            else 	if (d.vote_average < 5.5) { return "red" }
-              else { return "lightgray" }
+            if (d.original_title == "The Lone Ranger") {return "orange"}
+            else 	if (d.original_title == "Harry Potter and the Deathly Hallows: Part 2") { return "blue" }
+              else { return "gray" }
         ;})
   
      .attr('fill-opacity', function(d) {
