--- a/index.html
+++ b/index.html
@@ -134,5 +134,6 @@ d3.csv("https://miketeufel1.github.io/project/movies3.csv", function(error, data
 </script>
   <b3> <br/>The movie highlighted in blue has a Budget of $125M and a revenue of $1.3B</b3>
   <b4> <br/>The movie highlighted in orange has a Budget of $255M and a revenue of $89.3M</b4>
-  <b4> <br/> <br/>What other factors might be at play here?</b4>
+  <b4> <br/> <br/> </b4>
+  <a href="https://miketeufel1.github.io/project_2/">What other factors might be at play here?</a>
 </body>
