--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ div.tooltip {
 }
 
 </style>
-<h1> What's the relationship between a movie's "Budget" and it's "Revenue"? </h1>
+<h1> What's the relationship between a movie's "Budget" and its "Revenue"? </h1>
 <b1> Shown below is a scatterplot of all movies with a budget above $100M, plotted by their budgets in the millions on the x-axis, and their revenue in the millions on their y-axis. </b1>
 <b2> <br/>You can see a general trend of higher budgetted movies having higher revenues, but there are still datapoints showing high budgets with low revenue and vice versa. Why do the 2 highlighted points exist?</b2>
 <body>
